2010-06-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* FileFormatToolbox/dcm2metaimage.m

	- Fix bug. DICOM frames need to be rotated 90º because Matlab's
	convention is that X-coordinates go along columns.

2010-06-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_rv_crescent_tips.m

	- Instead of assigning the top and botton of the crest to the last
	and first axis points, just compute from each slice the closest
	axis point. Now there is no need for the axis and the right
	ventricle to have the same number of slices.

2010-06-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add CardiacToolbox/scinrrd_valve_surface.m.

	- Inter atrio-ventricular surface.

2010-06-09  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/crest_envelope.m:

	- Compute the envelope for the Right Ventricle's crest.

2010-05-28  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/process_misas_patient.m

	- Remove assumption that subdirectories with IMA files are called
	MISAS*. We need this because Jason will rename the MISAS*
	directories to NormalMri1, FatMri1, etc. before running this
	script.

2010-05-27  Ramon Casero  <ramc@clpc444.comlab>

	* Add CardiacToolbox/process_misas_patient.m

	- Create MetaImage volumes from directory tree of IMA DICOM files,
	for project with human hearts provided by Kelvin Wong.
	
	* FileFormatToolbox/sortdirbynum.m:

	- Fix bug. Exit gracefully when list of input files is empty.

2010-05-25  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add CardiacToolbox/correct_rv_crescent_tips.m

	- Correct the segmentation of the Right Ventricle's crescent tips
	using the segmentation of the tricuspid and pulmonary annula.

2010-05-19  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_rv_crescent_tips.m

	- Extend computation of the RV crescent tips to the RV slices that
	have no corresponding centroid. In that case the first and last
	centroids in the LV axis are used.
